--- a/README
+++ b/README
@@ -1,22 +1,33 @@
 
 Quick start guide:
 
-./configure --prefix=/somewhere [options]
-make
-make install
+0) Requirements:
+libevent2 (not libevent 1.4) must be installed somewhere (it need not be the 
+system default). The most recently tested libevent we test with is from 
+libevent.org:
+	libevent-2.0.21-stable.tar.gz
+It is easy to build and install; see README.libevent2.
 
+
+1) Building:
+libevent2_prefix=/opt/ovis
+if test -x $libevent2_prefix/lib/libevent_openssl.so; then
+  ./configure --prefix=/opt/ovis --with-libevent=$libevent2_prefix [options]
+  make
+  sudo make install
+fi
 
 Options: Given them all here to insure binary consistency across all parts.
+	./configure --help=recursive 
+will show the options for all the subpackages (lib, sos, ldms).
 Several practical configurations are illustrated in
 packaging/make-all-$platform.sh
 
-./configure --help=recursive 
-will give the options for all the packages (lib, sos, ldms)
 
-Options from all the packages can be combined and given to as
-the options to the top level configure in this directory.
+Options from all the packages can be combined and given as the options to 
+the top level configure in this directory. The subpackages will ignore unknown options (with warning about them).
 
 Eventually more configurations will be illustrated in our collection
 of nightly testing scripts.
 
-
+2) Running:
