ldms: hadoop_samplers: Fix metric name collision.
 - Prefix the metric names with the hadoop daemons

Change-Id: Iefecfd7fb65340f9174df47819a4165045e7f3bb

--- a/ldms/src/sampler/hadoop/hadoop-2-sinks/README
+++ b/ldms/src/sampler/hadoop/hadoop-2-sinks/README
@@ -34,3 +34,4 @@ To build,
 		- Maven 2.3 (Otherwise, modify the pom.xml as appropriate)
 	- Call 'mvn package' at the top level.
 	- The binary tar ball is in the target folder. Hadoop-OVIS-<version>.tar.gz
+	- Add the .jar path to the HADOOP_CLASSPATH in hadoop-env.sh.
