hadoop: Add the jobhistoryserver sampler and fix bugs in the hadoop sinks
 - Modify the Makefile.am to copy the metric list of each daemon to /etc/ovis/hadoop-metrics

Change-Id: Ib83bf834a808cc54ce13cc702f821bf6b596dcdc

--- a/ldms/src/sampler/hadoop/hadoopMetrics2-sinks/README
+++ b/ldms/src/sampler/hadoop/hadoopMetrics2-sinks/README
@@ -31,7 +31,7 @@ OvisSink
 To build,
 	- you need
 		- Hadoop 2.2
-		- Maven 2.3 (Otherwise, modify the pom.xml as appropriate)
+		- Maven
 	- Call 'mvn package' at the top level.
 	- The binary tar ball is in the target folder. Hadoop-OVIS-<version>.tar.gz
 	- Add the .jar path to the HADOOP_CLASSPATH in hadoop-env.sh.
