ENH: updated copyright notice in doc to header txt.

--- a/ldms/AUTHORS
+++ b/ldms/AUTHORS
@@ -1,2 +1,4 @@
 Open Grid Computing, Inc.
-Sandia National Laboratories
+(Tom Tucker, Narate Taerat, Nichamon Naskinehaboon)
+Sandia National Laboratories 
+(James M. Brandt, Ann C. Gentile, Benjamin A. Allan, Edward Walsh)
