--- a/util/man/Plugin_store_derived_csv.man
+++ b/util/man/Plugin_store_derived_csv.man
@@ -31,7 +31,7 @@ This MUST be store_derived_csv.
 .TP
 path=<path>
 .br
-The output files will be put into a directory whose root is specified by the path argument. This directory must exist; the subdirectories and files will be created. The full path to the output files will be <path>/<comp_type>/<container>. Typically these are chosen to make output files like: XXX/store_derived_csv/node/meminfo.
+The output files will be put into a directory whose root is specified by the path argument. This directory must exist; the subdirectories and files will be created. The full path to the output files will be <path>/<comp_type>/<container>. Typically these are chosen to make output files like: XXX/store_derived_csv/node/meminfo. If you choose a rollover option, then the filename will also be postpended by "-" followed by the epochtime e.g., XXX/store_csv/node/meminfo-123456789.
 .TP
 derivedconf=<confname>
 .br
@@ -39,7 +39,7 @@ Path to the derived configuration file. Format: metricname,Raw/Rate=(0/1),multip
 .TP
 alt_header=<altheader>
 .br
-The default output writes the header to the same file as the data file. alt_header=1 will write the header to an alternate file (e.g., if the data file is called "meminfo" the additional header file will be called "meminfo.HEADER"). Default is alt_header=0.
+The default output writes the header to the same file as the data file. alt_header=1 will write the header to an alternate file (e.g., if the data file is called "meminfo" the additional header file will be called "meminfo.HEADER"). If you choose a rollover option, the header file name will be postpended with the epochtime, similar to the data file, and a new one will be written at each rollover. Default is alt_header=0.
 .TP
 idpos=<idpos>
 .br
@@ -51,10 +51,10 @@ Set output data field Flag = 1 if the interval between two successive data repor
 .TP
 rolltype=<rolltype>
 .br
-By default, the store does not rollover and the data is written to a continously open filehandle. Rolltype and rollover are used in conjunction to enable the store to manage rollover, including flushing before rollover. The header will be rewritten when a roll occurs. Valid options are: 
-.RS 
+By default, the store does not rollover and the data is written to a continously open filehandle. Rolltype and rollover are used in conjunction to enable the store to manage rollover, including flushing before rollover. The header will be rewritten when a roll occurs. Valid options are:
+.RS
 .TP
-1 
+1
 .br
 wake approximately every rollover seconds and roll.
 .TP
@@ -79,7 +79,7 @@ Rollover value controls the frequency of rollover (e.g., number of bytes, number
 
 .TP
 .BR store
-name=<plugin_name> set=<set_name> comp_type=<type>  container=<container> 
+name=<plugin_name> set=<set_name> comp_type=<type>  container=<container>
 .br
 ldmsctl store line
 .RS
@@ -114,7 +114,7 @@ Example:
 .nf
 .RS
 $more /XXX/storeder.conf
-sys#1,0,1    
+sys#1,0,1
 idle#0,1,1000000
 Active,0,1
 user#0,1,1000000
@@ -133,7 +133,7 @@ Z+_SAMPLE_GEMINI_LINK_CREDIT_STALL (% x10e6),0,20
 .PP
 Blank lines are allowed in the file as shown
 .PP
-Any metric can only be in the file once. 
+Any metric can only be in the file once.
 
 .SH NOTES
 If you want to collect on a host and store that data on the same host, run two ldmsd's: one with a collector plugin only and one as an aggegrator
