--- a/util/man/ldmsd.man
+++ b/util/man/ldmsd.man
@@ -1,6 +1,6 @@
 .\" Manpage for ldmsd
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 8 "11 Sep 2014" "1.2" "ldmsd man page"
+.TH man 8 "30 Jan 2015" "1.3" "ldmsd man page"
 
 .SH NAME
 ldmsd \- Start an ldms daemon
@@ -81,7 +81,8 @@ THR_COUNT is the number of event threads to start.
 .BI -q " LOG_LEVEL"
 .br
 LOG_LEVEL can be one of DEBUG, INFO, ERROR, CRITICAL or QUIET.
-The default level is ERROR. QUIET produces no output.
+The default level is ERROR. QUIET produces no output. 
+(Note: this has changed from the previous release where q designated no (QUIET) logging).
 .TP
 .BI -S " SOCKNAME"
 .br
