--- a/util/man/Plugin_lustre2_client.man
+++ b/util/man/Plugin_lustre2_client.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_lustre2_client
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "11 Sep 2014" "1.2" "LDMS Plugin lustre2_client man page"
+.TH man 7 "11 Sep 2014" "v2.2/RC1.2" "LDMS Plugin lustre2_client man page"
 
 .SH NAME
 Plugin_lustre2_client - man page for the LDMS lustre2_client plugin
