--- a/util/man/Plugin_meminfo.man
+++ b/util/man/Plugin_meminfo.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_meminfo
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "11 Sep 2014" "1.2" "LDMS Plugin meminfo man page"
+.TH man 7 "11 Sep 2014" "v2.2/RC1.2" "LDMS Plugin meminfo man page"
 
 .SH NAME
 Plugin_meminfo - man page for the LDMS meminfo plugin
