--- a/util/man/Plugin_procnetdev.man
+++ b/util/man/Plugin_procnetdev.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_procnetdev
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "11 Sep 2014" "1.2" "LDMS Plugin procnetdev man page"
+.TH man 7 "11 Sep 2014" "v2.2/RC1.2" "LDMS Plugin procnetdev man page"
 
 .SH NAME
 Plugin_procnetdev - man page for the LDMS procnetdev plugin
