--- a/util/man/Plugin_procnfs.man
+++ b/util/man/Plugin_procnfs.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_procnfs
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "11 Sep 2014" "1.2" "LDMS Plugin procnfs man page"
+.TH man 7 "11 Sep 2014" "v2.2/RC1.2" "LDMS Plugin procnfs man page"
 
 .SH NAME
 Plugin_procnfs - man page for the LDMS procnfs plugin
