--- a/util/man/Plugin_procstatutil.man
+++ b/util/man/Plugin_procstatutil.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_procstatutil
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "11 Sep 2014" "1.2" "LDMS Plugin procstatutil man page"
+.TH man 7 "11 Sep 2014" "v2.2/RC1.2" "LDMS Plugin procstatutil man page"
 
 .SH NAME
 Plugin_procstatutil - man page for the LDMS procstatutil plugin
