--- a/util/man/Plugin_sysclassib.man
+++ b/util/man/Plugin_sysclassib.man
@@ -1,6 +1,6 @@
 .\" Manpage for Plugin_sysclassib
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "11 Sep 2014" "1.2" "LDMS Plugin sysclassib man page"
+.TH man 7 "11 Sep 2014" "v2.2/RC1.2" "LDMS Plugin sysclassib man page"
 
 .SH NAME
 Plugin_sysclassib - man page for the LDMS sysclassib plugin
