--- a/util/man/ldmsctl.man
+++ b/util/man/ldmsctl.man
@@ -1,6 +1,6 @@
 .\" Manpage for ldmsctl
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 8 "11 Sep 2014" "1.2" "ldmsctl man page"
+.TH man 8 "11 Sep 2014" "v2.2/RC1.2" "ldmsctl man page"
 
 .SH NAME
 ldmsctl \- Issue control commands to ldmsd.
