--- a/util/man/LDMS_QuickStart.man
+++ b/util/man/LDMS_QuickStart.man
@@ -1,6 +1,6 @@
 .\" Manpage for LDMS_QuickStart
 .\" Contact ovis-help@ca.sandia.gov to correct errors or typos.
-.TH man 7 "12 Sep 2014" "v2.2/RC1.2" "LDMS_QuickStart man page"
+.TH man 7 "02 Feb 2015" "v2.3/RC1.3" "LDMS_QuickStart man page"
 
 .SH NAME
 LDMS_QuickStart - man page for Quick Start of LDMS
@@ -115,7 +115,7 @@ A script can be made to start ldmsd and collectors on a host where that script c
 Notes:
 .RS
 .br
-* transport is one of: sock, rdma, ugni (ugni is Cray specific for using RDMA over the Gemini network)
+* transport is one of: sock, rdma, ugni (ugni is Cray specific for using RDMA over the Gemini/Aries network)
 .br
 * # worker threads defaults to 1 if not specified by -P and should not exceed the core count
 .br
@@ -559,7 +559,7 @@ Note: On some systems you will run aprun after a qsub -I or within a script spec
 
 
 .SH PROTECTION DOMAIN TAGS (Cray XC)
-If you are going to be using the "ugni" transport (RDMA over Gemini) you will need to run with either system (as root) or user (as user) ptags. While root CAN run using any ptag the fact that its use is unknown to ALPS could cause collisions with applications.
+If you are going to be using the "ugni" transport (RDMA over Aries) you will need to run with either system (as root) or user (as user) ptags. While root CAN run using any ptag the fact that its use is unknown to ALPS could cause collisions with applications.
 
 .SS To see current ptags:
 .nf
@@ -614,8 +614,6 @@ aprun <<usual aprun args here>> -p foo ldms_ls <<usual ldms_ls flags here>>
 .RE
 .fi
 Note: On some systems you will run aprun after a qsub -I or within a script specified in qsub or similiar.
-
-NOTE: LDMS is not supported on XC in this release.
 
 .SH TROUBLESHOOTING
 
